@@ -1,3 +1,6 @@
+* Thu Sep 8 2011 Thunor <thunorsif@hotmail.com>
+- Fixed a bug in _variables_export that was making the list widget hang.
+
 * Wed Sep 7 2011 Thunor <thunorsif@hotmail.com>
 - Fixed a bug in fill_clist_by_items whereby the item string was being
   corrupted by the linecutter function and wouldn't refresh. Item
